--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -9,18 +9,17 @@
 
                     <div class="form-group">
                         <label for="usuario">Usuário</label>
-                        <input class="form-control" type="text" name="usuario" id="usuario"
-                        placeholder="Seu usuário">
-                    </div>
+                        <input [(ngModel)]="userLogin.usuario" class="form-control" type="textusuario" id="usuario"placeholder="Seu usuário">
+                    </div>t" name="
 
                     <div class="form-group">
                         <label for="senha">Senha</label>
-                        <input class="form-control" type="password" name="senha" id="senha"
+                        <input [(ngModel)]="userLogin.senha" class="form-control" type="password" name="senha" id="senha"
                         placeholder="Sua Senha">
                     </div>
                     
                     <div class="d-flex justfy-content-center">
-                        <button class="btn btn-success">Entrar</button>
+                        <button class="btn btn-success" (click)="entrar()">Entrar</button>
                     </div>
 
                     <hr class="mt-5 mb-5">
