Componente inicio sem consumo

--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -10,7 +10,7 @@
                     <div class="form-group">
                         <label for="usuario">Usuário</label>
                         <input [(ngModel)]="userLogin.usuario" class="form-control" type="textusuario" id="usuario"placeholder="Seu usuário">
-                    </div>t" name="
+                    </div>
 
                     <div class="form-group">
                         <label for="senha">Senha</label>
@@ -22,11 +22,10 @@
                         <button class="btn btn-success" (click)="entrar()">Entrar</button>
                     </div>
 
-                    <hr class="mt-5 mb-5">
+                    <hr class="mb-5 mt-5">
 
-                    <p class="text-center">
-                        Não tem uma conta? <a routerLink='/cadastrar'>Cadastre-se</a>
-                    </p>
+          <p class="text-center">Não tem uma conta? <a routerLink='/cadastro'>Cadastre-se</a> </p>
+
 
                 </div>
 
